--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -27,8 +27,8 @@ jobs:
       - name: Build React app
         run: npm run build
 
-      - name: Verify build folder exists
-        run: ls -alh build/
+      - name: Verify dist folder exists
+        run: ls -alh dist/
 
       - name: Setup SSH key
         env:
@@ -39,4 +39,4 @@ jobs:
 
       - name: Copy build folder to EC2
         run: |
-          rsync -avz -e "ssh -o StrictHostKeyChecking=no -i ssh-key.pem" build/ ubuntu@3.110.218.162:/home/ubuntu/react
+          rsync -avz -e "ssh -o StrictHostKeyChecking=no -i ssh-key.pem" dist/ ubuntu@3.110.218.162:/home/ubuntu/react
