--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -39,4 +39,4 @@ jobs:
 
       - name: Copy build folder to EC2
         run: |
-          rsync -avz -e "ssh -o StrictHostKeyChecking=no -i ssh-key.pem" dist/ ubuntu@13.203.199.210:/home/ubuntu/react
+          rsync -avz -e "ssh -o StrictHostKeyChecking=no -i ssh-key.pem" dist/ ubuntu@13.203.199.210:/var/www/html
